--- a/Botches/skyrim/index.html
+++ b/Botches/skyrim/index.html
@@ -186,93 +186,518 @@
       </div>
 <hr />
       <div id="potions">
-        <table id="potionTable">
-          <thead>
-            <tr>
-              <td>
-                Ingredient
-              </td><td>
-                Ingredient
-              </td><td>
 
-                Ingredient
-              </td>
-            </tr>
-          </thead>
-          <tbody>
-        <tr><td>Wheat </td><td> Giant’s Toe </td><td> Creep Cluster </td><td> 1250</td>
-        </td></tr><tr><td>Giant's Toe </td><td> Wheat </td><td> 950
-        </td></tr><tr><td>Blue Mountain Flower </td><td> Hanging Moss </td><td> Hagraven Feathers </td><td> 724
-        </td></tr><tr><td>Deathbell </td><td> Salt Pile </td><td> Taproot </td><td> 707
-        </td></tr><tr><td>Blue Mountain Flower </td><td> Hanging Moss </td><td> Butterfly Wing </td><td> 644
-        </td></tr><tr><td>Fire Salts </td><td> Salt Pile </td><td> 1 of (Deathbell, Moon Sugar or Creep Cluster) </td><td> 631
-        </td></tr><tr><td>Creep Cluster </td><td> Scaly Pholiata </td><td> Giant's Toe </td><td> 618
-        </td></tr><tr><td>Blue Mountain Flower </td><td> Hanging Moss </td><td> Nordic Barnacle </td><td> 612
-        </td></tr><tr><td>Blue Mountain Flower </td><td> Hanging Moss </td><td> Chaurus Eggs </td><td> 609
-        </td></tr><tr><td>White Cap </td><td> Ice Wraith Teeth </td><td> Vampire Dust </td><td> 597
-        </td></tr><tr><td>Hanging Moss </td><td> Bear Claws </td><td> Chicken Egg </td><td> 591
-        </td></tr><tr><td>White Cap </td><td> Ice Wraith Teeth </td><td> Nirnroot </td><td> 558
-        </td></tr><tr><td>Scaly Pholiata </td><td> Taproot </td><td> Creep Cluster </td><td> 557
-        </td></tr><tr><td>Blue Mountain Flower </td><td> Hanging Moss </td><td> 529
-        </td></tr><tr><td>Hanging Moss </td><td> Wheat </td><td> Nightshade </td><td> 529
-        </td></tr><tr><td>Frost Salts </td><td> Moon Sugar </td><td> 1 of (Fire Salts or Taproot) </td><td> 503
-        </td></tr><tr><td>Spriggan Sap </td><td> Nordic Barnacle </td><td> Hanging Moss </td><td> 486
-        </td></tr><tr><td>Hanging Moss </td><td> Spider Egg </td><td> 1 of (Blisterwort, Bone Meal or Cyrodilic Spadetail) </td><td> 482
-        </td></tr><tr><td>Scaly Pholiata </td><td> Taproot </td><td> Jazbay Grapes </td><td> 478
-        </td></tr><tr><td>Swamp Fungal Pod </td><td> Imp Stool </td><td> 476
-        </td></tr><tr><td>Dragon's Tongue </td><td> Fly Amanita </td><td> Troll Fat </td><td> 471
-        </td></tr><tr><td>Luna Moth Wing </td><td> Chaurus Eggs </td><td>463
-        </td></tr><tr><td>Canis Root </td><td> 1 of (Imp Stool or Swamp Fungal Pod) </td><td> 445
-        </td></tr><tr><td>Hanging Moss </td><td> Pine Thrush Egg </td><td> Spider Egg </td><td> 444
-        </td></tr><tr><td>Dwarven Oil </td><td> Taproot </td><td> Dragon's Tongue </td><td> 442
-        </td></tr><tr><td>Nightshade </td><td> Chicken's Egg </td><td> 414
-        </td></tr><tr><td>Hanging Moss </td><td> Spriggan Sap </td><td> 404
-        </td></tr><tr><td>Hanging Moss </td><td> Glow Dust </td><td> 400
-        </td></tr><tr><td>Glow Dust </td><td> Spider Egg </td><td> Hanging Moss </td><td> 400
-        </td></tr><tr><td>Dwarven Oil </td><td> Salt Pile </td><td> Grass Pod </td><td> 397
-        </td></tr><tr><td>Lavender </td><td> Garlic </td><td> Vampire Dust </td><td> 388
-        </td></tr><tr><td>Silverside Perch </td><td> Wheat </td><td> Blue Mountain Flower </td><td> 382
-        </td></tr><tr><td>Creep Cluster </td><td> Scaly Pholiata </td><td> 381
-        </td></tr><tr><td>Taproot </td><td> Jazbay Grapes </td><td> Creep Cluster </td><td> 377
-        </td></tr><tr><td>Hanging Moss </td><td> Wheat </td><td> Skeever Tail </td><td> 368
-        </td></tr><tr><td>Any 2 of (Deathbell, Large Antlers, River Betty or Salt Pile) </td><td> 367
-        </td></tr><tr><td>Tundra Cotton </td><td> Bleeding Crown </td><td>Void Salts </td><td> 358
-        </td></tr><tr><td>Chicken Egg </td><td> Bear Claws </td><td> Nightshade </td><td> 349
-        </td></tr><tr><td>Namira's Rot </td><td> Nordic Barnicle </td><td> 343
-        </td></tr><tr><td>Fly Amanita </td><td> Troll Fat </td><td> 341
-        </td></tr><tr><td>Salt </td><td> 1 of (Jazbay Grapes or Taproot) </td><td> 339
-        </td></tr><tr><td>Jasbay Grapes </td><td> Taproot </td><td> 339
-        </td></tr><tr><td>Glow Dust </td><td> Spider Egg </td><td> 334
-        </td></tr><tr><td>Bone Meal </td><td> Troll Fat </td><td> Dragon's Tongue </td><td> 319
-        </td></tr><tr><td>Saber Cat Tooth </td><td> Thistle Branch </td><td> Charred Skeever Hide </td><td> 310
-        </td></tr><tr><td>Orange Dartwing </td><td> Slaughterfish Egg </td><td> 308
-        </td></tr><tr><td>Frost Mirriam </td><td> Purple Mountain Flower </td><td> 302
-        </td></tr><tr><td>Dragon's Tongue </td><td> Fly Amanita </td><td> 302
-        </td></tr><tr><td>Fire Salts </td><td> 1 of (Moon Sugar or Taproot) </td><td> 301
-        </td></tr><tr><td>Moon Sugar </td><td> Taproop </td><td> 301
-        </td></tr><tr><td>Namira’s Root </td><td> Nordic Barnacle </td><td> 289
-        </td></tr><tr><td>Garlic </td><td> Slaughterfish Egg </td><td> 286
-        </td></tr><tr><td>Purple Mountain Flower </td><td> Torchbug </td><td> Silverside Perch </td><td> 278
-        </td></tr><tr><td>Dragon's Tongue </td><td> Void Salts </td><td> Tundra Cotton </td><td> 266
-        </td></tr><tr><td>Garlic </td><td> 1 of (Juniper Berries or Moon Sugar) </td><td> 264
-        </td></tr><tr><td>Fly Amanita </td><td> Scaly Pholiata </td><td> 264
-        </td></tr><tr><td>Blue Mountain Flower </td><td> Swamp </td><td> Wheat </td><td> 264
-        </td></tr><tr><td>Tundra Cotton </td><td> Bleeding Crown </td><td> 254
-        </td></tr><tr><td>Large Antlers </td><td> Purple Mountain Flower </td><td> Torchbug </td><td> 253
-        </td></tr><tr><td>Silverside Perch </td><td> Jazbay Grapes </td><td> 245
-        </td></tr><tr><td>Canis Root </td><td> Rock Warbler Egg </td><td> 244
-        </td></tr><tr><td>Frost Salts </td><td> Moon Sugar </td><td> 239
-        </td></tr><tr><td>Bone Meal </td><td> Blisterwort </td><td> Troll Fat </td><td> 235
-        </td></tr><tr><td>Lavender </td><td> Frost Salts </td><td> Torchbug Thorax </td><td> 229
-        </td></tr><tr><td>Elves Ear </td><td> Fire Salts </td><td> 227
-        </td></tr><tr><td>Dragon's Tongue </td><td> Tundra Cotton </td><td> Scaly Pholiata </td><td> 222
-        </td></tr><tr><td>Scaly Pholiata </td><td> Taproot </td><td> 214
-        </td></tr><tr><td>Slaughterfish Scales </td><td> Thistle Branch </td><td> 210
-        </td></tr><tr><td>Dragon's Tongue </td><td> Tundra Cotton </td><td> Snowberries </td><td> 209
-        </td></tr><tr><td>Charred Skeever Hide </td><td> Mudcrab Chitin </td><td> Vampire Dust </td><td> 209
-        </td>
-        </tr>
-      </tbody></table>
+
+<table id="potionTable">
+   <thead>
+      <tr>
+         <td>
+            Ingredient
+         </td>
+         <td>
+            Ingredient
+         </td>
+         <td>
+            Ingredient
+         </td>
+      </tr>
+   </thead>
+   <tbody>
+      <tr>
+         <td>Wheat </td>
+         <td> Giant’s Toe </td>
+         <td> Creep Cluster </td>
+         <td> 1250</td>
+         </td>
+      </tr>
+      <tr>
+         <td>Giant's Toe </td>
+         <td> Wheat </td>
+         <td></td>
+         <td> 950
+         </td>
+      </tr>
+      <tr>
+         <td>Blue Mountain Flower </td>
+         <td> Hanging Moss </td>
+         <td> Hagraven Feathers </td>
+         <td> 724
+         </td>
+      </tr>
+      <tr>
+         <td>Deathbell </td>
+         <td> Salt Pile </td>
+         <td> Taproot </td>
+         <td> 707
+         </td>
+      </tr>
+      <tr>
+         <td>Blue Mountain Flower </td>
+         <td> Hanging Moss </td>
+         <td> Butterfly Wing </td>
+         <td> 644
+         </td>
+      </tr>
+      <tr>
+         <td>Fire Salts </td>
+         <td> Salt Pile </td>
+         <td> 1 of (Deathbell, Moon Sugar or Creep Cluster) </td>
+         <td> 631
+         </td>
+      </tr>
+      <tr>
+         <td>Creep Cluster </td>
+         <td> Scaly Pholiata </td>
+         <td> Giant's Toe </td>
+         <td> 618
+         </td>
+      </tr>
+      <tr>
+         <td>Blue Mountain Flower </td>
+         <td> Hanging Moss </td>
+         <td> Nordic Barnacle </td>
+         <td> 612
+         </td>
+      </tr>
+      <tr>
+         <td>Blue Mountain Flower </td>
+         <td> Hanging Moss </td>
+         <td> Chaurus Eggs </td>
+         <td> 609
+         </td>
+      </tr>
+      <tr>
+         <td>White Cap </td>
+         <td> Ice Wraith Teeth </td>
+         <td> Vampire Dust </td>
+         <td> 597
+         </td>
+      </tr>
+      <tr>
+         <td>Hanging Moss </td>
+         <td> Bear Claws </td>
+         <td> Chicken Egg </td>
+         <td> 591
+         </td>
+      </tr>
+      <tr>
+         <td>White Cap </td>
+         <td> Ice Wraith Teeth </td>
+         <td> Nirnroot </td>
+         <td> 558
+         </td>
+      </tr>
+      <tr>
+         <td>Scaly Pholiata </td>
+         <td> Taproot </td>
+         <td> Creep Cluster </td>
+         <td> 557
+         </td>
+      </tr>
+      <tr>
+         <td>Blue Mountain Flower </td>
+         <td> Hanging Moss </td>
+         <td></td>
+         <td> 529
+         </td>
+      </tr>
+      <tr>
+         <td>Hanging Moss </td>
+         <td> Wheat </td>
+         <td> Nightshade </td>
+         <td> 529
+         </td>
+      </tr>
+      <tr>
+         <td>Frost Salts </td>
+         <td> Moon Sugar </td>
+         <td> 1 of (Fire Salts or Taproot) </td>
+         <td> 503
+         </td>
+      </tr>
+      <tr>
+         <td>Spriggan Sap </td>
+         <td> Nordic Barnacle </td>
+         <td> Hanging Moss </td>
+         <td> 486
+         </td>
+      </tr>
+      <tr>
+         <td>Hanging Moss </td>
+         <td> Spider Egg </td>
+         <td> 1 of (Blisterwort, Bone Meal or Cyrodilic Spadetail) </td>
+         <td> 482
+         </td>
+      </tr>
+      <tr>
+         <td>Scaly Pholiata </td>
+         <td> Taproot </td>
+         <td> Jazbay Grapes </td>
+         <td> 478
+         </td>
+      </tr>
+      <tr>
+         <td>Swamp Fungal Pod </td>
+         <td> Imp Stool </td>
+         <td></td>
+         <td> 476
+         </td>
+      </tr>
+      <tr>
+         <td>Dragon's Tongue </td>
+         <td> Fly Amanita </td>
+         <td> Troll Fat </td>
+         <td> 471
+         </td>
+      </tr>
+      <tr>
+         <td>Luna Moth Wing </td>
+         <td> Chaurus Eggs </td>
+         <td></td>
+         <td>463
+         </td>
+      </tr>
+      <tr>
+         <td>Canis Root </td>
+         <td> 1 of (Imp Stool or Swamp Fungal Pod) </td>
+         <td></td>
+         <td> 445
+         </td>
+      </tr>
+      <tr>
+         <td>Hanging Moss </td>
+         <td> Pine Thrush Egg </td>
+         <td> Spider Egg </td>
+         <td> 444
+         </td>
+      </tr>
+      <tr>
+         <td>Dwarven Oil </td>
+         <td> Taproot </td>
+         <td> Dragon's Tongue </td>
+         <td></td>
+         <td> 442
+         </td>
+      </tr>
+      <tr>
+         <td>Nightshade </td>
+         <td> Chicken's Egg </td>
+         <td></td>
+         <td> 414
+         </td>
+      </tr>
+      <tr>
+         <td>Hanging Moss </td>
+         <td> Spriggan Sap </td>
+         <td></td>
+         <td> 404
+         </td>
+      </tr>
+      <tr>
+         <td>Hanging Moss </td>
+         <td> Glow Dust </td>
+         <td></td>
+         <td> 400
+         </td>
+      </tr>
+      <tr>
+         <td>Glow Dust </td>
+         <td> Spider Egg </td>
+         <td> Hanging Moss </td>
+         <td> 400
+         </td>
+      </tr>
+      <tr>
+         <td>Dwarven Oil </td>
+         <td> Salt Pile </td>
+         <td> Grass Pod </td>
+         <td> 397
+         </td>
+      </tr>
+      <tr>
+         <td>Lavender </td>
+         <td> Garlic </td>
+         <td> Vampire Dust </td>
+         <td> 388
+         </td>
+      </tr>
+      <tr>
+         <td>Silverside Perch </td>
+         <td> Wheat </td>
+         <td> Blue Mountain Flower </td>
+         <td> 382
+         </td>
+      </tr>
+      <tr>
+         <td>Creep Cluster </td>
+         <td> Scaly Pholiata </td>
+         <td></td>
+         <td> 381
+         </td>
+      </tr>
+      <tr>
+         <td>Taproot </td>
+         <td> Jazbay Grapes </td>
+         <td> Creep Cluster </td>
+         <td> 377
+         </td>
+      </tr>
+      <tr>
+         <td>Hanging Moss </td>
+         <td> Wheat </td>
+         <td> Skeever Tail </td>
+         <td> 368
+         </td>
+      </tr>
+      <tr>
+         <td>Any 2 of (Deathbell, Large Antlers, River Betty or Salt Pile) </td>
+         <td></td>
+         <td></td>
+         <td> 367
+         </td>
+      </tr>
+      <tr>
+         <td>Tundra Cotton </td>
+         <td> Bleeding Crown </td>
+         <td>Void Salts </td>
+         <td> 358
+         </td>
+      </tr>
+      <tr>
+         <td>Chicken Egg </td>
+         <td> Bear Claws </td>
+         <td> Nightshade </td>
+         <td> 349
+         </td>
+      </tr>
+      <tr>
+         <td>Namira's Rot </td>
+         <td> Nordic Barnicle </td>
+         <td></td>
+         <td> 343
+         </td>
+      </tr>
+      <tr>
+         <td>Fly Amanita </td>
+         <td> Troll Fat </td>
+         <td></td>
+         <td> 341
+         </td>
+      </tr>
+      <tr>
+         <td>Salt </td>
+         <td> 1 of (Jazbay Grapes or Taproot) </td>
+         <td></td>
+         <td> 339
+         </td>
+      </tr>
+      <tr>
+         <td>Jasbay Grapes </td>
+         <td> Taproot </td>
+         <td></td>
+         <td> 339
+         </td>
+      </tr>
+      <tr>
+         <td>Glow Dust </td>
+         <td> Spider Egg </td>
+         <td></td>
+         <td> 334
+         </td>
+      </tr>
+      <tr>
+         <td>Bone Meal </td>
+         <td> Troll Fat </td>
+         <td> Dragon's Tongue </td>
+         <td> 319
+         </td>
+      </tr>
+      <tr>
+         <td>Saber Cat Tooth </td>
+         <td> Thistle Branch </td>
+         <td> Charred Skeever Hide </td>
+         <td> 310
+         </td>
+      </tr>
+      <tr>
+         <td>Orange Dartwing </td>
+         <td> Slaughterfish Egg </td>
+         <td></td>
+         <td> 308
+         </td>
+      </tr>
+      <tr>
+         <td>Frost Mirriam </td>
+         <td> Purple Mountain Flower </td>
+         <td></td>
+         <td> 302
+         </td>
+      </tr>
+      <tr>
+         <td>Dragon's Tongue </td>
+         <td> Fly Amanita </td>
+         <td></td>
+         <td> 302
+         </td>
+      </tr>
+      <tr>
+         <td>Fire Salts </td>
+         <td> 1 of (Moon Sugar or Taproot) </td>
+         <td></td>
+         <td> 301
+         </td>
+      </tr>
+      <tr>
+         <td>Moon Sugar </td>
+         <td> Taproop </td>
+         <td></td>
+         <td> 301
+         </td>
+      </tr>
+      <tr>
+         <td>Namira’s Root </td>
+         <td> Nordic Barnacle </td>
+         <td></td>
+         <td> 289
+         </td>
+      </tr>
+      <tr>
+         <td>Garlic </td>
+         <td> Slaughterfish Egg </td>
+         <td></td>
+         <td> 286
+         </td>
+      </tr>
+      <tr>
+         <td>Purple Mountain Flower </td>
+         <td> Torchbug </td>
+         <td> Silverside Perch </td>
+         <td> 278
+         </td>
+      </tr>
+      <tr>
+         <td>Dragon's Tongue </td>
+         <td> Void Salts </td>
+         <td> Tundra Cotton </td>
+         <td> 266
+         </td>
+      </tr>
+      <tr>
+         <td>Garlic </td>
+         <td> 1 of (Juniper Berries or Moon Sugar) </td>
+         <td></td>
+         <td> 264
+         </td>
+      </tr>
+      <tr>
+         <td>Fly Amanita </td>
+         <td> Scaly Pholiata </td>
+         <td></td>
+         <td> 264
+         </td>
+      </tr>
+      <tr>
+         <td>Blue Mountain Flower </td>
+         <td> Swamp </td>
+         <td> Wheat </td>
+         <td> 264
+         </td>
+      </tr>
+      <tr>
+         <td>Tundra Cotton </td>
+         <td> Bleeding Crown </td>
+         <td></td>
+         <td> 254
+         </td>
+      </tr>
+      <tr>
+         <td>Large Antlers </td>
+         <td> Purple Mountain Flower </td>
+         <td> Torchbug </td>
+         <td> 253
+         </td>
+      </tr>
+      <tr>
+         <td>Silverside Perch </td>
+         <td> Jazbay Grapes </td>
+         <td></td>
+         <td> 245
+         </td>
+      </tr>
+      <tr>
+         <td>Canis Root </td>
+         <td> Rock Warbler Egg </td>
+         <td></td>
+         <td> 244
+         </td>
+      </tr>
+      <tr>
+         <td>Frost Salts </td>
+         <td> Moon Sugar </td>
+         <td></td>
+         <td> 239
+         </td>
+      </tr>
+      <tr>
+         <td>Bone Meal </td>
+         <td> Blisterwort </td>
+         <td> Troll Fat </td>
+         <td> 235
+         </td>
+      </tr>
+      <tr>
+         <td>Lavender </td>
+         <td> Frost Salts </td>
+         <td> Torchbug Thorax </td>
+         <td> 229
+         </td>
+      </tr>
+      <tr>
+         <td>Elves Ear </td>
+         <td> Fire Salts </td>
+         <td></td>
+         <td> 227
+         </td>
+      </tr>
+      <tr>
+         <td>Dragon's Tongue </td>
+         <td> Tundra Cotton </td>
+         <td> Scaly Pholiata </td>
+         <td> 222
+         </td>
+      </tr>
+      <tr>
+         <td>Scaly Pholiata </td>
+         <td> Taproot </td>
+         <td></td>
+         <td> 214
+         </td>
+      </tr>
+      <tr>
+         <td>Slaughterfish Scales </td>
+         <td> Thistle Branch </td>
+         <td></td>
+         <td> 210
+         </td>
+      </tr>
+      <tr>
+         <td>Dragon's Tongue </td>
+         <td> Tundra Cotton </td>
+         <td> Snowberries </td>
+         <td> 209
+         </td>
+      </tr>
+      <tr>
+         <td>Charred Skeever Hide </td>
+         <td> Mudcrab Chitin </td>
+         <td> Vampire Dust </td>
+         <td> 209
+         </td>
+      </tr>
+   </tbody>
+</table>
+
+
       </div>
       <link rel="stylesheet" type="text/css" href="../../tools/datatables/datatables.min.css">
       <script src="../../tools/datatables/datatables.min.js"></script>
